boceto iniciap header listo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <div class="header-bar">
+        <div class="row">
             <h3>
                 agoodshop
             </h3>
@@ -24,7 +24,9 @@
                     <a href="">Contactar</a>
                 </button>
             </div>   
-        </div>    
+        </div>
     </header>
+
+    <p>hola</p>
 </body>
 </html>
