adicion de imagenes

--- a/index.html
+++ b/index.html
@@ -27,6 +27,27 @@
         </div>
     </header>
 
-    <p>hola</p>
+    <div class="oferta">
+        <img src="images/iphone-13-pro-blue-select.jpeg" alt="">
+            <div class="oferta-info"></div>
+                <span>
+                    oferta
+                </span>
+                <h2>
+                    compra un ifhone 13 pro
+                </h2>
+                <p>
+                    iFhone 13: Tu nuevo superpoder. Nuestro sistema de cámara dual más avanzado. El chip que
+                    hace morder el polvo a la competencia. Un subidón de autonomía que vaya si notarás.
+                    Ceramic Shield, más duro que cualquier vidrio de smartphone.
+                    Pantalla Super Retina XDR de 6,1 pulgadas. Diseño robusto con bordes planos y resistente al
+                    agua.
+                </p>
+            </div>
+
+
+    </div>
+
+
 </body>
 </html>
