inicio caja de oferta

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li class="links-item"><a href="">Accesorios</a></li>
                     <li class="links-item"><a href="">Soporte</a></li>
                 </ul>
-                <button>
+                <button id="contacto-button">
                     <a href="">Contactar</a>
                 </button>
             </div>   
@@ -28,9 +28,9 @@
     </header>
 
     <div class="oferta">
-        <img src="images/iphone-13-pro-blue-select.jpeg" alt="">
-            <div class="oferta-info"></div>
-                <span>
+        <img src="images/iphone 13 2.webp" alt="">
+            <div class="oferta-info">
+                <span id="oferta-texto-llamativo">
                     oferta
                 </span>
                 <h2>
@@ -43,9 +43,25 @@
                     Pantalla Super Retina XDR de 6,1 pulgadas. Diseño robusto con bordes planos y resistente al
                     agua.
                 </p>
+                <div class="precio-tag">
+                    <span class="precio">
+                        938,99€
+                    </span>
+                    <button>
+                        comprar
+                    </button>
+                </div>
+                <div class="oferta-lista">
+                    <ul class="">
+                        <li>Envío rápido, gratuito
+                            y sin contacto</li>
+                        <li>Devoluciones fáciles y
+                            gratuitas</li>
+                        <li>Posibilidad de pago a
+                            plazos</li>
+                    </ul>
+                </div>
             </div>
-
-
     </div>
 
 
