insercion imagenes genericas y creacion de forma

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>a-good-shop</title>
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <header>
@@ -26,22 +27,23 @@
             </div>   
         </div>
     </header>
-
+<main>
     <div class="oferta">
-        <img src="images/iphone 13 2.webp" alt="">
-            <div class="oferta-info">
+            <img src="https://via.placeholder.com/471x466" alt="">
+            <span class="imagen-label">128gb</span>
+        <div class="oferta-info">
                 <span id="oferta-texto-llamativo">
-                    oferta
+                oferta
                 </span>
                 <h2>
-                    compra un ifhone 13 pro
+                compra un ifhone 13 pro
                 </h2>
                 <p>
-                    iFhone 13: Tu nuevo superpoder. Nuestro sistema de cámara dual más avanzado. El chip que
-                    hace morder el polvo a la competencia. Un subidón de autonomía que vaya si notarás.
-                    Ceramic Shield, más duro que cualquier vidrio de smartphone.
-                    Pantalla Super Retina XDR de 6,1 pulgadas. Diseño robusto con bordes planos y resistente al
-                    agua.
+                iFhone 13: Tu nuevo superpoder. Nuestro sistema de cámara dual más avanzado. El chip que
+                hace morder el polvo a la competencia. Un subidón de autonomía que vaya si notarás.
+                Ceramic Shield, más duro que cualquier vidrio de smartphone.
+                Pantalla Super Retina XDR de 6,1 pulgadas. Diseño robusto con bordes planos y resistente al
+                agua.
                 </p>
                 <div class="precio-tag">
                     <span class="precio">
@@ -51,19 +53,87 @@
                         comprar
                     </button>
                 </div>
-                <div class="oferta-lista">
-                    <ul class="">
-                        <li>Envío rápido, gratuito
-                            y sin contacto</li>
-                        <li>Devoluciones fáciles y
-                            gratuitas</li>
-                        <li>Posibilidad de pago a
-                            plazos</li>
-                    </ul>
-                </div>
-            </div>
+                <ul class="oferta-list">
+                    <li>Envío rápido, gratuito
+                        y sin contacto</li>
+                    <li>Devoluciones fáciles y
+                        gratuitas</li>
+                    <li>Posibilidad de pago a
+                        plazos</li>
+                 </ul>
+        </div>
     </div>
 
+    <h2>Accesorios recomendados</h2>
+
+   <div class="accesorios-recomendados">
+       <article class="accesorio">
+            <img src="https://via.placeholder.com/236x170" alt="" class="imagen-accesorio">
+            <h3>Cargador</h3>
+            <p>
+                El adaptador de corriente USB-C
+                de 20 W es muy rápido y
+                eficiente, así que va de perlas
+                para cargar tus dispositivos en
+                cualquier lugar.
+            </p>
+       </article>
+       <article class="accesorio">
+            <img src="https://via.placeholder.com/236x170" alt="" class="imagen-accesorio">
+            <h3>Base de carga inalambrica</h3>
+            <button>oferta</button>
+            <p>
+                Sistema de soporte para que
+                sigas usando tu smartphone
+                cómodamente mientras lo
+                cargas. Compatible con carga
+                rápida de 20W.
+            </p>
+       </article>
+       <article class="accesorio">
+            <img src="https://via.placeholder.com/236x170" alt="" class="imagen-accesorio">
+            <h3>Funda piel</h3>
+            <p>
+                Fabricadas en piel europea
+                curtida y teñida con un proceso
+                especial, son suaves al tacto y
+                adquieren un tono natural con el
+                tiempo. Los botones de aluminio
+                combinan a la perfección con el
+                acabado de la piel.
+            </p>
+       </article>
+       <article class="accesorio">
+            <img src="https://via.placeholder.com/236x170" alt="" class="imagen-accesorio">    
+            <h3>Cargador</h3>
+            <button>Nuevo</button>
+            <p>
+                El adaptador de corriente USB-C
+                de 20 W es muy rápido y
+                eficiente, así que va de perlas
+                para cargar tus dispositivos en
+                cualquier lugar
+            </p>
+       </article>
+   </div>
+
+   <div class="sorteo">
+       <div class="sorteo-description">
+           <h1>Participa en el sorteo de un
+            iFhone 13</h1>
+           <p>Este verano, ¡venimos cargados de premios! Así que antes de irte de vacaciones,
+            ¡participa en nuestro sorteo! y podrás llevarte un regalo increíble como un nuevo
+            iFhone 13</p>
+           <p>Rellena este formulario para ser uno de los afortunados.</p>
+           
+       </div>
+       <form action="" class="sorteo-form">
+           <input type="text" name="name" id="name">
+           <input type="email" name="email" id="email">
+           <button type="submit">Enviar</button>
+       </form>
+   </div>
+</main>
 
 </body>
 </html>
